passing struck to view

--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,15 @@
 
 {{ define "main" }}
 <div class="text">
-    {{ .content }}
+    {{ .ID }}
+</div>
+<div class="text">
+    {{ .Name }}
+</div>
+<div class="text">
+    {{ .Price }}
+</div>
+<div class="text">
+    {{ .Stock }}
 </div>
 {{ end }}
