--- a/views/index.html
+++ b/views/index.html
@@ -1,16 +1,15 @@
 {{ template "layout" .}}
 
 {{ define "main" }}
-<div class="text">
-    {{ .ID }}
-</div>
-<div class="text">
-    {{ .Name }}
-</div>
-<div class="text">
-    {{ .Price }}
-</div>
-<div class="text">
-    {{ .Stock }}
-</div>
+
+{{ range .}}
+    <div class="text">
+        {{ .Name }} => {{ .Price }}
+        {{ if lt .Stock 5}}
+            Stok hampir habis
+        {{ end }}
+    </div>
+{{ end }}
+
+
 {{ end }}
