--- a/views/index.html
+++ b/views/index.html
@@ -4,10 +4,7 @@
 
 {{ range .}}
     <div class="text">
-        {{ .Name }} => {{ .Price }}
-        {{ if lt .Stock 5}}
-            Stok hampir habis
-        {{ end }}
+        {{ .Name }} => {{ .Price }} => {{ .Stock }} ({{ .StockStatus }})
     </div>
 {{ end }}
 
