load static files

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 {{ define "main" }}
 
 {{ range .}}
-    <div class="text">
+    <div class="text box-with-shadow">
         {{ .Name }} => {{ .Price }} => {{ .Stock }} ({{ .StockStatus }})
     </div>
 {{ end }}
